# sid_test_py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sid_test_py/: __init__.py  sid_test_py.py
